@@ -7,7 +7,7 @@ a<>b	a<>b
 {"name":"kitchen"}
 {"name":"hall"}
 {"fridge":"empty","name":"Kitchen"}
-{"name":"toilet","occupied":-1}
+{"name":"toilet","occupied":1}
 {"fridge":"empty","name":"Kitchen"}
 {"name":"hall"}
 toilet
